@@ -25,12 +25,12 @@
 //#define _TEST_STABILITY
 
 // static WCHAR SuRun_Beta[]={0x03B2,'3',
-// // static WCHAR SuRun_Beta[]={'r','c','6',
-// #ifdef _TEST_STABILITY
-//     'a',
-// #endif _TEST_STABILITY
-//     0};
-// #define BetaVer SuRun_Beta
+static WCHAR SuRun_Beta[]={'r','c','1',
+#ifdef _TEST_STABILITY
+    'a',
+#endif _TEST_STABILITY
+    0};
+#define BetaVer SuRun_Beta
 // 
 // #define DoDBGTrace
 
